--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     </div>
  
     <div id="div_middle">
-        <h1>pridection 1</h1>
+        <h1>prediction 1</h1>
         <h1 id="name1"></h1>
         <h1 id="gesture1"></h1>
 
-        <h1>pridection 2</h1>
+        <h1>prediction 2</h1>
         <h1 id="name2"></h1>
         <h1 id="gesture2"></h1>
         </div>
